--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
     "gulp-react": "^3.0.1",
+    "gulp-rimraf": "^0.1.1",
+    "gulp-server-livereload": "^1.4.0",
     "gulp-sourcemaps": "^1.5.2",
+    "jshint-jsx": "^0.4.1",
     "react-tools": "^0.13.3"
   }
 }
